--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "fetch": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
